--- a/src/html/options.html
+++ b/src/html/options.html
@@ -101,6 +101,11 @@
                 <input type="number" id="servicesTimeout" min="5" max="45" step="1" data-required>
             </div>
 
+            <div class="form-group">
+                <label for="debugMode" data-l10n-ref="options.debugMode">&nbsp;</label>
+                <input type="checkbox" id="debugMode">
+            </div>
+
             <!-- Anthropic Claude section -->
             <fieldset id="anthropic">
                 <legend>Anthropic Claude:</legend>
