* Refactor file names; * Prepare moderation call and output management.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -209,7 +209,7 @@
             </div>
         </form>
 
-        <script type="module" src="../ts/Options.ts"></script>
-        <script type="module" src="../ts/Options-openai.ts"></script>
+        <script type="module" src="../ts/options.ts"></script>
+        <script type="module" src="../ts/optionsOpenai.ts"></script>
     </body>
 </html>
