--- a/src/html/options.html
+++ b/src/html/options.html
@@ -37,50 +37,54 @@
                     <option value="en">English</option>
                     <option value="eo">Esperanto - Esperanto</option>
                     <option value="et">Estonian - Eesti</option>
-                    <option value="tl">Filipino - Filipino</option>
                     <option value="fi">Finnish - Suomi</option>
                     <option value="fr">French - Français</option>
-                    <option value="gl">Galician - Galego</option>
                     <option value="ka">Georgian - ქართული</option>
                     <option value="de">German - Deutsch</option>
                     <option value="el">Greek - Ελληνικά</option>
-                    <option value="gu">Gujarati - ગુજરાતી</option>
-                    <option value="ht">Haitian Creole - Kreyòl Ayisyen</option>
                     <option value="he">Hebrew - עברית</option>
                     <option value="hi">Hindi - हिन्दी</option>
                     <option value="hu">Hungarian - Magyar</option>
                     <option value="is">Icelandic - Íslenska</option>
-                    <option value="ig">Igbo - Igbo</option>
                     <option value="id">Indonesian - Bahasa Indonesia</option>
                     <option value="ga">Irish - Gaeilge</option>
                     <option value="it">Italian - Italiano</option>
                     <option value="ja">Japanese - 日本語</option>
-                    <option value="jw">Javanese - Basa Jawa</option>
                     <option value="kn">Kannada - ಕನ್ನಡ</option>
                     <option value="kk">Kazakh - Қазақша</option>
-                    <option value="km">Khmer - ភាសាខ្មែរ</option>
                     <option value="ko">Korean - 한국어</option>
                     <option value="ku">Kurdish - Kurdî</option>
-                    <option value="ky">Kyrgyz - Кыргызча</option>
-                    <option value="lo">Lao - ພາສາລາວ</option>
-                    <option value="la">Latin - Latine</option>
                     <option value="lv">Latvian - Latviešu</option>
                     <option value="lt">Lithuanian - Lietuvių</option>
-                    <option value="lb">Luxembourgish - Lëtzebuergesch</option>
                     <option value="mk">Macedonian - Македонски</option>
-                    <option value="mg">Malagasy - Malagasy</option>
                     <option value="ms">Malay - Bahasa Melayu</option>
                     <option value="ml">Malayalam - മലയാളം</option>
                     <option value="mt">Maltese - Malti</option>
-                    <option value="mi">Maori - Te Reo Māori</option>
                     <option value="mr">Marathi - मराठी</option>
                     <option value="mn">Mongolian - Монгол</option>
-                    <option value="my">Myanmar - မြန်မာ</option>
                     <option value="ne">Nepali - नेपाली</option>
                     <option value="no">Norwegian - Norsk</option>
-                    <option value="or">Odia - ଓଡ଼ିଆ</option>
-                    <option value="ps">Pashto - پښتو</option>
-                    <option value="fa">Persian - فارسی</option>
+                    <option value="pl">Polish - Polski</option>
+                    <option value="pt">Portuguese - Português</option>
+                    <option value="pa">Punjabi - ਪੰਜਾਬੀ</option>
+                    <option value="ro">Romanian - Română</option>
+                    <option value="ru">Russian - Русский</option>
+                    <option value="sr">Serbian - Српски</option>
+                    <option value="sk">Slovak - Slovenčina</option>
+                    <option value="sl">Slovenian - Slovenščina</option>
+                    <option value="es">Spanish - Español</option>
+                    <option value="sw">Swahili - Kiswahili</option>
+                    <option value="sv">Swedish - Svenska</option>
+                    <option value="ta">Tamil - தமிழ்</option>
+                    <option value="te">Telugu - తెలుగు</option>
+                    <option value="th">Thai - ไทย</option>
+                    <option value="tr">Turkish - Türkçe</option>
+                    <option value="uk">Ukrainian - Українська</option>
+                    <option value="ur">Urdu - اردو</option>
+                    <option value="vi">Vietnamese - Tiếng Việt</option>
+                    <option value="cy">Welsh - Cymraeg</option>
+                    <option value="yo">Yoruba - Yorùbá</option>
+                    <option value="zu">Zulu - isiZulu</option>
                 </select>
                 <div class="description" data-l10n-ref="options.mainUserLanguage.description"></div>
             </div>
