--- a/src/html/options.html
+++ b/src/html/options.html
@@ -101,6 +101,12 @@
             </div>
 
             <div class="form-group">
+                <label for="llmTemperature" data-l10n-ref="options.llmTemperature">&nbsp;</label>
+                <input id="llmTemperature" data-required type="range" min="0" max="2" value="1" step="0.25">
+                <div class="description" data-l10n-ref="options.llmTemperature.description"></div>
+            </div>
+
+            <div class="form-group">
                 <label for="servicesTimeout" data-l10n-ref="options.servicesTimeout">&nbsp;</label>
                 <input type="number" id="servicesTimeout" min="5" max="45" step="1" data-required>
             </div>
