Configure safety settings for Google Gemini

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -188,7 +188,7 @@
                 </div>
 
                 <!-- Text 2 Speech -->
-                <fieldset class="text2speech light">
+                <fieldset class="light">
                     <legend data-l10n-ref="options.openai.text2speech"></legend>
 
                     <div class="form-group">
@@ -222,7 +222,6 @@
                         <input id="openaiText2SpeechSpeed" data-required type="range" min="0.25" max="4" value="1" step="0.25">
                     </div>
                 </fieldset><!-- /Text 2 Speech -->
-
             </fieldset><!-- /OpenAI GPT section -->
 
             <div class="form-group buttons">
