--- a/src/html/options.html
+++ b/src/html/options.html
@@ -95,6 +95,7 @@
                     <option disabled selected data-l10n-ref="options.llmProvider.default"></option>
                     <option value="anthropic">Anthropic Claude</option>
                     <option value="google">Google Gemini</option>
+                    <option value="ollama">Ollama (Llama, Phi, Mistral, Gemma, &hellip;)</option>
                     <option value="openai">OpenAI GPT</option>
                 </select>
                 <div class="description" data-l10n-ref="options.llmProvider.description"></div>
@@ -117,112 +118,16 @@
             </div>
 
             <!-- Anthropic Claude section -->
-            <fieldset id="anthropic">
-                <legend>Anthropic Claude:</legend>
-
-                <div class="form-group">
-                    <label for="anthropicApiKey" data-l10n-ref="options.anthropic.apiKey">&nbsp;</label>
-                    <input id="anthropicApiKey" type="password" data-required>
-                    <div class="description" data-l10n-ref="options.anthropic.apiKey.description"></div>
-                </div>
-
-                <!-- https://docs.anthropic.com/en/docs/about-claude/models#model-names -->
-                <div class="form-group">
-                    <label for="anthropicModel" data-l10n-ref="options.anthropic.model">&nbsp;</label>
-                    <select id="anthropicModel" data-required>
-                        <option value="claude-3-5-sonnet-20240620">Claude 3.5 Sonnet</option>
-                        <option value="claude-3-opus-20240229">Claude 3 Opus</option>
-                        <option value="claude-3-sonnet-20240229">Claude 3 Sonnet</option>
-                        <option selected value="claude-3-haiku-20240307">Claude 3 Haiku</option>
-                    </select>
-                </div>
-            </fieldset><!-- /Anthropic Claude section -->
+            <include src="partials/options-anthropic-claude.html"></include><!-- /Anthropic Claude section -->
 
             <!-- Google Gemini section -->
-            <fieldset id="google">
-                <legend>Google Gemini:</legend>
+            <include src="partials/options-google-gemini.html"></include><!-- /Google Gemini section -->
 
-                <div class="form-group">
-                    <label for="googleApiKey" data-l10n-ref="options.google.apiKey">&nbsp;</label>
-                    <input id="googleApiKey" type="password" data-required>
-                    <div class="description" data-l10n-ref="options.google.apiKey.description"></div>
-                </div>
-
-                <!-- https://ai.google.dev/gemini-api/docs/models/gemini#model-variations -->
-                <div class="form-group">
-                    <label for="googleModel" data-l10n-ref="options.google.model">&nbsp;</label>
-                    <select id="googleModel" data-required>
-                        <option value="gemini-1.5-flash">Gemini 1.5 Flash</option>
-                        <option value="gemini-1.5-pro">Gemini 1.5 Pro</option>
-                        <option value="gemini-1.0-pro">Gemini 1.0 Pro</option>
-                    </select>
-                </div>
-            </fieldset><!-- /Google Gemini section -->
+            <!-- Ollama section -->
+            <include src="partials/options-ollama.html"></include><!-- /Ollama section -->
 
             <!-- OpenAI GPT section -->
-            <fieldset id="openai">
-                <legend>OpenAI GPT:</legend>
-
-                <div class="form-group">
-                    <label for="openaiApiKey" data-l10n-ref="options.openai.apiKey">&nbsp;</label>
-                    <input id="openaiApiKey" type="password" data-required>
-                    <div class="description" data-l10n-ref="options.openai.apiKey.description"></div>
-                </div>
-
-                <div class="form-group">
-                    <label for="openaiOrganizationId" data-l10n-ref="options.openai.organizationId">&nbsp;</label>
-                    <input id="openaiOrganizationId" type="text">
-                    <div class="description" data-l10n-ref="options.openai.organizationId.description"></div>
-                </div>
-
-                <!-- https://platform.openai.com/docs/models/models-overview -->
-                <div class="form-group">
-                    <label for="openaiModel" data-l10n-ref="options.openai.model">&nbsp;</label>
-                    <select id="openaiModel" data-required>
-                        <option selected value="gpt-4o-mini">GPT-4o mini</option>
-                        <option value="gpt-4o">GPT-4o</option>
-                        <option value="gpt-4-turbo">GPT-4 Turbo</option>
-                        <option value="gpt-4">GPT-4</option>
-                        <option value="gpt-3.5-turbo">GPT-3.5 Turbo</option>
-                    </select>
-                </div>
-
-                <!-- Text 2 Speech -->
-                <fieldset class="light">
-                    <legend data-l10n-ref="options.openai.text2speech"></legend>
-
-                    <div class="form-group">
-                        <label for="openaiText2SpeechAudioQuality" data-l10n-ref="options.openai.text2speech.audioQuality">&nbsp;</label>
-                        <select id="openaiText2SpeechAudioQuality" data-required>
-                            <option selected value="tts-1" data-l10n-ref="options.openai.text2speech.audioQuality.tts1"></option>
-                            <option value="tts-1-hd" data-l10n-ref="options.openai.text2speech.audioQuality.tts1hd"></option>
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="openaiText2SpeechVoice" data-l10n-ref="options.openai.text2speech.voice">&nbsp;</label>
-                        <select id="openaiText2SpeechVoice" data-required>
-                            <option value="alloy">Alloy</option>
-                            <option value="echo">Echo</option>
-                            <option value="fable">Fable</option>
-                            <option selected value="onyx">Onyx</option>
-                            <option value="nova">Nova</option>
-                            <option value="shimmer">Shimmer</option>
-                        </select>
-
-                        <div id="openaiText2SpeechVoicePreview" class="description">
-                            <audio controls preload="none" src="https://cdn.openai.com/API/docs/audio/alloy.wav"></audio>
-
-                            <div data-l10n-ref="options.openai.text2speech.voice.description"></div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="openaiText2SpeechSpeed" data-l10n-ref="options.openai.text2speech.speed">&nbsp;</label>
-                        <input id="openaiText2SpeechSpeed" data-required type="range" min="0.25" max="4" value="1" step="0.25">
-                    </div>
-                </fieldset><!-- /Text 2 Speech -->
-            </fieldset><!-- /OpenAI GPT section -->
+            <include src="partials/options-openai-gpt.html"></include><!-- /OpenAI GPT section -->
 
             <div class="form-group buttons">
                 <button type="button" class="test" data-l10n-ref="options.testButton" disabled>&nbsp;</button>
