Continuation of Work Version 0.88
	•	Library updates;
	•	Progress with Ollama.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -135,7 +135,8 @@
             </div>
         </form>
 
-        <script type="module" src="../ts/options.ts"></script>
-        <script type="module" src="../ts/optionsOpenai.ts"></script>
+        <script type="module" src="../ts/options/options.ts"></script>
+        <script type="module" src="../ts/options/optionsOllama.ts"></script>
+        <script type="module" src="../ts/options/optionsOpenai.ts"></script>
     </body>
 </html>
