--- a/src/html/options.html
+++ b/src/html/options.html
@@ -86,6 +86,7 @@
                     <option value="yo">Yoruba - Yorùbá</option>
                     <option value="zu">Zulu - isiZulu</option>
                 </select>
+
                 <div class="description" data-l10n-ref="options.mainUserLanguage.description"></div>
             </div>
 
@@ -98,18 +99,22 @@
                     <option value="ollama">Ollama (Llama, Phi, Mistral, Gemma, &hellip;)</option>
                     <option value="openai">OpenAI GPT</option>
                 </select>
+
                 <div class="description" data-l10n-ref="options.llmProvider.description"></div>
             </div>
 
             <div class="form-group">
                 <label for="llmTemperature" data-l10n-ref="options.llmTemperature">&nbsp;</label>
                 <input id="llmTemperature" data-required type="range" min="0" max="2" value="1" step="0.25">
+
                 <div class="description" data-l10n-ref="options.llmTemperature.description"></div>
             </div>
 
             <div class="form-group">
                 <label for="servicesTimeout" data-l10n-ref="options.servicesTimeout">&nbsp;</label>
-                <input type="number" id="servicesTimeout" min="5" max="45" step="1" data-required>
+                <input type="number" id="servicesTimeout" min="5" max="80" step="1" data-required>
+
+                <div class="description ollama-warning-timeout" data-l10n-ref="options.ollama.warningTimeout"></div>
             </div>
 
             <div class="form-group">
