Continuation of Work Version 0.88
	•	Library updates;
	•	Remove SVG close icon in favor of CSS solution;
	•	Progress with Ollama.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -9,7 +9,10 @@
 
     <body>
         <form id="optionsForm">
-            <div id="testResult"></div>
+            <div id="testResult">
+                <span class="close-icon">&times;</span>
+                <span class="message"></span>
+            </div>
             <div id="saveOK" data-l10n-ref="options.savedPreferences"></div>
 
             <div id="owlForExchangeBug" data-l10n-ref="options.errorOwlForExchangeBug"></div>
