--- a/src/html/options.html
+++ b/src/html/options.html
@@ -99,7 +99,8 @@
                     <option disabled selected data-l10n-ref="options.llmProvider.default"></option>
                     <option value="anthropic">Anthropic Claude</option>
                     <option value="google">Google Gemini</option>
-                    <option value="ollama">Ollama (Llama, Phi, Mistral, Gemma, &hellip;)</option>
+                    <option value="groq">Groq (Gemma, Llama, Mistral)</option>
+                    <option value="ollama">Ollama (Gemma, Llama, Mistral, Phi, &hellip;)</option>
                     <option value="openai">OpenAI GPT</option>
                 </select>
 
@@ -131,6 +132,9 @@
             <!-- Google Gemini section -->
             <include src="partials/options-google-gemini.html"></include><!-- /Google Gemini section -->
 
+            <!-- Groq section -->
+            <include src="partials/options-groq.html"></include><!-- /Groq section -->
+
             <!-- Ollama section -->
             <include src="partials/options-ollama.html"></include><!-- /Ollama section -->
 
@@ -144,6 +148,7 @@
         </form>
 
         <script type="module" src="../ts/options/options.ts"></script>
+        <script type="module" src="../ts/options/optionsGroq.ts"></script>
         <script type="module" src="../ts/options/optionsOllama.ts"></script>
         <script type="module" src="../ts/options/optionsOpenai.ts"></script>
     </body>
