Continuation of Work Version 0.88
	•	Library updates;
	•	Fix the error message displayed in Ollama API calls;
	•	A more precise definition of Groq’s cloud services.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -99,7 +99,7 @@
                     <option disabled selected data-l10n-ref="options.llmProvider.default"></option>
                     <option value="anthropic">Anthropic Claude</option>
                     <option value="google">Google Gemini</option>
-                    <option value="groq">Groq (Gemma, Llama, Mistral)</option>
+                    <option value="groq">Groq cloud (Gemma, Llama, Mistral)</option>
                     <option value="ollama">Ollama (Gemma, Llama, Mistral, Phi, &hellip;)</option>
                     <option value="openai">OpenAI GPT</option>
                 </select>
