Continuation of Work Version 0.8
	•	Library updates;
	•	Fix for temperature parameter handling in Google Gemini.
	•	Removal of the Google Gemini 1.0 Pro model, now deprecated and scheduled for removal on February 15, 2025;
	•	Start of integration with xAI Grok;
	•	README.md update.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -102,6 +102,7 @@
                     <option value="groq">Groq cloud (Gemma, Llama, Mistral)</option>
                     <option value="ollama">Ollama (Gemma, Llama, Mistral, Phi, &hellip;)</option>
                     <option value="openai">OpenAI GPT</option>
+                    <option value="xai">xAI Grok</option>
                 </select>
 
                 <div class="description" data-l10n-ref="options.llmProvider.description"></div>
@@ -140,6 +141,9 @@
 
             <!-- OpenAI GPT section -->
             <include src="partials/options-openai-gpt.html"></include><!-- /OpenAI GPT section -->
+
+            <!-- xAI Grok section -->
+            <include src="partials/options-xai-grok.html"></include><!-- /xAI Grok section -->
 
             <div class="form-group buttons">
                 <button type="button" class="test" data-l10n-ref="options.testButton" disabled>&nbsp;</button>
