Continuation of Work Version 90
	•	Library updates;
	•	Added password toggle web component for API keys.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -151,6 +151,10 @@
             </div>
         </form>
 
+        <!-- Components: -->
+        <script type="module" src="../ts/components/PasswordToggle.ts"></script>
+
+        <!-- Options: -->
         <script type="module" src="../ts/options/options.ts"></script>
         <script type="module" src="../ts/options/optionsGroq.ts"></script>
         <script type="module" src="../ts/options/optionsOllama.ts"></script>
