Continuation of Work Version 90
	•	Library updates;
	•	Add support for "LM Studio" provider;
	•	Fix wrong labels for Groq Cloud.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -31,6 +31,7 @@
                     <option value="anthropic">Anthropic Claude</option>
                     <option value="google">Google Gemini</option>
                     <option value="groq">Groq cloud (Gemma, Llama, Mistral)</option>
+                    <option value="lms">LM Studio (Gemma, Llama, Mistral, Phi, StarCoder, &hellip;)</option>
                     <option value="ollama">Ollama (Gemma, Llama, Mistral, Phi, &hellip;)</option>
                     <option value="openai">OpenAI GPT</option>
                     <option value="xai">xAI Grok</option>
@@ -50,7 +51,7 @@
                 <label for="servicesTimeout" data-l10n-ref="options.servicesTimeout">&nbsp;</label>
                 <input type="number" id="servicesTimeout" min="5" max="80" step="1" data-required>
 
-                <div class="description ollama-warning-timeout" data-l10n-ref="options.ollama.warningTimeout"></div>
+                <div class="description local-llm-warning-timeout" data-l10n-ref="localLlm.warningTimeout"></div>
             </div>
 
             <div class="form-group">
@@ -66,6 +67,9 @@
 
             <!-- Groq section -->
             <include src="partials/options-groq.html"></include><!-- /Groq section -->
+
+            <!-- LM Studio section -->
+            <include src="partials/options-lms.html"></include><!-- /LM Studio section -->
 
             <!-- Ollama section -->
             <include src="partials/options-ollama.html"></include><!-- /Ollama section -->
@@ -89,6 +93,7 @@
         <!-- Options: -->
         <script type="module" src="../ts/options/options.ts"></script>
         <script type="module" src="../ts/options/optionsGroq.ts"></script>
+        <script type="module" src="../ts/options/optionsLms.ts"></script>
         <script type="module" src="../ts/options/optionsOllama.ts"></script>
         <script type="module" src="../ts/options/optionsOpenai.ts"></script>
     </body>
