--- a/src/html/options.html
+++ b/src/html/options.html
@@ -29,6 +29,7 @@
                 <select id="llmProvider" required>
                     <option disabled selected data-l10n-ref="options.llmProvider.default"></option>
                     <option value="anthropic">Anthropic Claude</option>
+                    <option value="deepseek">DeepSeek</option>
                     <option value="google">Google Gemini</option>
                     <option value="groq">Groq cloud (Gemma, Llama, Mistral)</option>
                     <option value="lms">LM Studio (Gemma, Llama, Mistral, Phi, StarCoder, &hellip;)</option>
@@ -61,6 +62,9 @@
 
             <!-- Anthropic Claude section -->
             <include src="partials/options-anthropic-claude.html"></include><!-- /Anthropic Claude section -->
+
+            <!-- DeepSeek section -->
+            <!--<include src="partials/options-deepseek.html"></include>--><!-- /DeepSeek section -->
 
             <!-- Google Gemini section -->
             <include src="partials/options-google-gemini.html"></include><!-- /Google Gemini section -->
