Continuation of Work Version 90
	•	Initial integration for DeepSeek;

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -64,7 +64,7 @@
             <include src="partials/options-anthropic-claude.html"></include><!-- /Anthropic Claude section -->
 
             <!-- DeepSeek section -->
-            <!--<include src="partials/options-deepseek.html"></include>--><!-- /DeepSeek section -->
+            <include src="partials/options-deepseek.html"></include><!-- /DeepSeek section -->
 
             <!-- Google Gemini section -->
             <include src="partials/options-google-gemini.html"></include><!-- /Google Gemini section -->
