Continuation of Work Version 91
	•	Library updates;
	•	Minor changes to comments;
	•	Completion of Mistral AI implementation.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -33,6 +33,7 @@
                     <option value="google">Google Gemini</option>
                     <option value="groq">Groq cloud (Gemma, Llama, Mistral)</option>
                     <option value="lms">LM Studio (Gemma, Llama, Mistral, Phi, StarCoder, &hellip;)</option>
+                    <option value="mistral">Mistral</option>
                     <option value="ollama">Ollama (Gemma, Llama, Mistral, Phi, &hellip;)</option>
                     <option value="openai">OpenAI GPT</option>
                     <option value="xai">xAI Grok</option>
@@ -74,6 +75,9 @@
 
             <!-- LM Studio section -->
             <include src="partials/options-lms.html"></include><!-- /LM Studio section -->
+
+            <!-- Mistral AI section -->
+            <include src="partials/options-mistral.html"></include><!-- / Mistral AI section -->
 
             <!-- Ollama section -->
             <include src="partials/options-ollama.html"></include><!-- /Ollama section -->
