--- a/src/html/options.html
+++ b/src/html/options.html
@@ -37,9 +37,9 @@
                 <select id="llmProvider" required>
                     <option disabled selected data-l10n-ref="options.llmProvider.default"></option>
                     <option value="anthropic">Anthropic Claude</option>
-                    <option value="deepseek">杭州深度求索人工智能基础技术研究有限公司 DeepSeek</option>
                     <option value="google">Google Gemini</option>
                     <option value="groq">Groq cloud (Gemma, Llama, Mistral)</option>
+                    <option value="deepseek">Hangzhou DeepSeek AI</option>
                     <option value="lms">LM Studio (Gemma, Llama, Mistral, Phi, StarCoder, &hellip;)</option>
                     <option value="mistral">Mistral</option>
                     <option value="ollama">Ollama (Gemma, Llama, Mistral, Phi, &hellip;)</option>
