Continuation of Work Version 91
	•	Library updates;
	•	Translation language configuration via options (feature not yet available).

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -24,13 +24,13 @@
                 <div class="description" data-l10n-ref="options.mainUserLanguage.description"></div>
             </div>
 
-            <!--<div class="form-group">
-                <label for="translationLanguagesCode" data-l10n-ref="options.translationLanguagesCode">&nbsp;</label>
+            <div class="form-group">
+                <label for="translationLanguageCodes" data-l10n-ref="options.translationLanguageCodes">&nbsp;</label>
 
-                <multiple-language-selector id="translationLanguagesCode"></multiple-language-selector>
+                <multiple-language-selector id="translationLanguageCodes"></multiple-language-selector>
 
-                <div class="description" data-l10n-ref="options.translationLanguagesCode.description"></div>
-            </div>-->
+                <div class="description" data-l10n-ref="options.translationLanguageCodes.description"></div>
+            </div>
 
             <div class="form-group">
                 <label for="llmProvider" data-l10n-ref="options.llmProvider">&nbsp;</label>
