--- a/src/html/backup/options.html
+++ b/src/html/backup/options.html
@@ -36,19 +36,15 @@
                 <label for="llmProvider" data-l10n-ref="options.llmProvider">&nbsp;</label>
                 <select id="llmProvider" required>
                     <option disabled selected data-l10n-ref="options.llmProvider.default"></option>
-                    <!--
                     <option value="anthropic">Anthropic Claude</option>
                     <option value="google">Google Gemini</option>
                     <option value="groq">Groq cloud (Gemma, Llama, Mistral)</option>
                     <option value="deepseek">Hangzhou DeepSeek AI</option>
                     <option value="lms">LM Studio (Gemma, Llama, Mistral, Phi, StarCoder, &hellip;)</option>
                     <option value="mistral">Mistral</option>
-                    -->
-                    <option value="ollama">Ollama (IBM Granite3.1, Granite3.2, Granite3.3 &hellip;)</option>
-                    <!--
+                    <option value="ollama">Ollama (Gemma, Llama, Mistral, Phi, &hellip;)</option>
                     <option value="openai">OpenAI GPT</option>
                     <option value="xai">xAI Grok</option>
-                    -->
                 </select>
 
                 <div class="description" data-l10n-ref="options.llmProvider.description"></div>
