--- a/ai-mail-support/backgroundMenu.html
+++ b/ai-mail-support/backgroundMenu.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>Background - Menu</title><script type="module" src="/backgroundMenu.117effc8.js"></script></head><body></body></html>
+<!DOCTYPE html><html lang><meta charset=utf-8><title>Background - Menu</title><script type=module src=/backgroundMenu.117effc8.js></script><body>
